# gp-schedule-api

./: .dist.env  .gitignore  .test.env.dist  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  requirements.txt
geek_plants_api/: config.py  logger.py  main.py
geek_plants_api/api/: app.py
geek_plants_api/core/models/: full_name.py
src/: config.py  constants.py  database.py  environment_setup.py  exceptions.py  main.py  schemas.py  setup_env.py  utils.py
src/api/: app.py  status_codes.py
src/api/responses/: __init__.py  base_response.py  organization_responses.py
src/api/routers/: __init__.py  api_router.py  auth_router.py  organization_router.py  user_router.py
src/application/auth/: __init__.py  auth_utils.py
src/auth/: dependencies.py  exceptions.py  router.py  schemas.py  utils.py
src/core/: exceptions.py
src/core/schemes/: user.py  (+3 more)
src/email/: service.py
src/email_app/: service.py
src/export_/: router.py  service.py
src/import_/: router.py  service.py
src/org/: models.py  repositories.py  router.py  schemas.py  service.py  stores.py
src/presentation/: exceptions.py
src/schedule/: exc.py  models.py  router.py  schemas.py  service.py
src/services/: __init__.py  organization_service.py
src/user/: models.py  repositories.py  router.py  schemas.py  service.py  stores.py
tests/: conftest.py
tests/controllers/: test_user_auth_controller.py
tests/repositories/: test_organization_repositories.py  test_user_repositories.py
tests/schemes/: test_full_name.py  test_organization.py  test_user.py
(+90 files in other folders)
